@@ -6,7 +6,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.context.annotation.Profile;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.ProviderManager;
@@ -23,9 +22,9 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Slf4j
-@Profile("runtime")
 @Configuration
 @EnableWebSecurity
 public class WebSecurityConfig {
@@ -58,12 +57,13 @@ public class WebSecurityConfig {
         http
                 .cors(cors -> cors.configurationSource(request -> {
                     CorsConfiguration config = new CorsConfiguration();
-                    config.setAllowedOrigins(Arrays.asList("http://localhost:4200"));
-                    config.setAllowedMethods(Arrays.asList("*")); // Allow all HTTP methods
-                    config.setAllowedHeaders(Arrays.asList("*")); // Allow all headers
+                    config.setAllowedOrigins(List.of("http://localhost:4200"));
+                    config.setAllowedMethods(List.of("*")); // Allow all HTTP methods
+                    config.setAllowedHeaders(List.of("*")); // Allow all headers
                     return config;
                 }))
                 .csrf(AbstractHttpConfigurer::disable)
+                .headers(httpSecurityHeadersConfigurer -> httpSecurityHeadersConfigurer.frameOptions(frameOptionsConfig -> frameOptionsConfig.disable()))
                 .sessionManagement(httpSecuritySessionManagementConfigurer -> httpSecuritySessionManagementConfigurer.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .formLogin(AbstractHttpConfigurer::disable)
                 .securityMatcher("/**")
@@ -71,13 +71,16 @@ public class WebSecurityConfig {
                         .requestMatchers("/").permitAll()
                         .requestMatchers("/favicon.ico").permitAll()
                         .requestMatchers("/auth/login").permitAll()
-                        .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/login/**", "/error").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/adres/api/v1/adresses/**", "/persons/**").permitAll()
-                        .requestMatchers(HttpMethod.DELETE, "/adres/api/v1/adresses/**", "/persons/**").hasAnyAuthority("READ", "WRITE")
-                        .requestMatchers(HttpMethod.POST, "/adres/api/v1/adresses/**", "/persons/**").hasAnyAuthority("READ", "WRITE")
-                        .requestMatchers(HttpMethod.PATCH, "/adres/api/v1/adresses/**", "/persons/**").hasAnyAuthority("READ", "WRITE")
-                        .requestMatchers("/actuator/**", "/user/**", "/roles/**").hasAuthority("WRITE")
-                        .anyRequest().authenticated())
+                        .requestMatchers("/h2-console/**").permitAll()
+                        .requestMatchers("/v3/api-docs/**", "/swagger-ui/**","/error").permitAll()
+                        .requestMatchers("/adres/api/v1/login/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/adres/api/v1/adresses/**", "/adres/api/v1/persons/**").permitAll()
+                        .requestMatchers(HttpMethod.DELETE, "/adres/api/v1/adresses/**", "/adres/api/v1/persons/**").hasAnyAuthority("READ", "WRITE")
+                        .requestMatchers(HttpMethod.POST, "/adres/api/v1/adresses/**", "/adres/api/v1/persons/**").hasAnyAuthority("READ", "WRITE")
+                        .requestMatchers(HttpMethod.PATCH, "/adres/api/v1/adresses/**", "/adres/api/v1/persons/**").hasAnyAuthority("READ", "WRITE")
+                        .requestMatchers("/actuator/**", "/adres/api/v1/user/**", "/adres/api/v1/roles/**").hasAuthority("WRITE")
+//                        .anyRequest().authenticated()
+                )
                 .httpBasic(Customizer.withDefaults())
         ;
 
